# rip

./: CMakeLists.txt  README.md  arg_parser.cpp
include/: arg_parser.hpp  colors.hpp  crc32.hpp  rip_archive.hpp  tar_parser.hpp
include/crypto/: crc32.hpp
src/: arg_parser.cpp  main.cpp  rip_archive.cpp  tar_parser.cpp
src/archive/: rip_archive.cpp
test_env/: sample.tar
